src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Department__c</fullName>
        <formula>Account.Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Primary_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Primary_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Primary_Postal_Code__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Primary_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary state/province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account_Primary_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Primary Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Account__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Address_Line_1__c</fullName>
        <inlineHelpText>Only business address should be entered against a contact</inlineHelpText>
        <label>Address Line 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Alt_Language_Address_1__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Alt_Language_Address_2__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Alt_Language_City__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Alt_Language_Postal_Code__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Alt_Language_country__c</fullName>
        <description>Alternate language address to be used to enter language other than English.</description>
        <label>Alt Language country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Central_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be used to capture if a contact has been centrally blocked. By default this field will be unchecked.</description>
        <label>Central Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Customer_Excellence_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Candidate for Customer Excellence Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Deactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be checked when a contact needs to be deactivated by Data Ops</description>
        <inlineHelpText>Check this box if you want to deactivate a contact</inlineHelpText>
        <label>Deactivation Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Deactivation_Reason__c</fullName>
        <description>Field to capture contact deactivation reason.</description>
        <inlineHelpText>Provide deactivation reason</inlineHelpText>
        <label>Deactivation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate Contact</fullName>
                </value>
                <value>
                    <fullName>Denied Party</fullName>
                </value>
                <value>
                    <fullName>Moved to new company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, you may not contact the individual for sales or marketing purposes without their consent or an affirmative request for information/assistance. Authorized comms may include customer service requests and account maintenance.</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Engagement_Name__c</fullName>
        <label>Engagement Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Flex_Plus_Primary_Contact_Active__c</fullName>
        <label>Flex Plus Primary Contact Active</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag when checked enables the contact to access IPS, only when the associated an Account is not Export Compliance Block and an Intel Support Owner has been identified. When this flag is unchecked the the contact cannot access IPS.</description>
        <label>IPS Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The IPS Email Opt Out flag is the mechanism to allow External Contacts the ability to opt out of all emails sent from IPS.</description>
        <label>IPS Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_IPS_Intel_Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Intel Support Owner is the Intel Representative that is in charge of all Pre-Sales Support functionality. This person is typically the technical owner and/or sales representative.</description>
        <label>Intel Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IPS_Supported_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_IPS_NDA_Acceptance_Date__c</fullName>
        <label>NDA Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Core_Import_ID__c</fullName>
        <description>For the initial load only, this field keeps track of which &quot;import run&quot; a record was inserted or updated from, for quick/easy isolation.</description>
        <label>Import ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Job_Function_Code__c</fullName>
        <description>Field to store the code that corresponds to the Job Function.</description>
        <label>Job Function Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Administration/Clerical</fullName>
                </value>
                <value>
                    <fullName>Branch Manager</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Consultant/Advisor</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Database Administrator</fullName>
                </value>
                <value>
                    <fullName>eBusiness Manager/Developer</fullName>
                </value>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Communications Engineer</fullName>
                </value>
                <value>
                    <fullName>Customer Quality/Support Engineer</fullName>
                </value>
                <value>
                    <fullName>Facilities Management and Maintenance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Hardware Engineer</fullName>
                </value>
                <value>
                    <fullName>Healthcare Professional</fullName>
                </value>
                <value>
                    <fullName>Human Resource</fullName>
                </value>
                <value>
                    <fullName>Information Management Professional</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
                <value>
                    <fullName>Network Engineer</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Warehousing, Transportation and Conveyan</fullName>
                </value>
                <value>
                    <fullName>Communications/Public Relations</fullName>
                </value>
                <value>
                    <fullName>Media and Design</fullName>
                </value>
                <value>
                    <fullName>Marketing Executive</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other - Engineering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Language__c</fullName>
        <label>Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Lead_Conversion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Conversion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_LinkedIN__c</fullName>
        <description>Linkedin link</description>
        <label>LinkedIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Local_First_Name__c</fullName>
        <description>This field to be used to get inputs on Local Name of contact (if any)</description>
        <label>Local First Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Local_Last_Name__c</fullName>
        <description>This field to be used to get inputs on Local Name of contact (if any).</description>
        <label>Local Last Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Login_Id__c</fullName>
        <description>Field to capture login Ids of contact.</description>
        <label>Login Id</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Core_Old_Email__c</fullName>
        <label>Old Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Core_Other_Social_Information__c</fullName>
        <label>Other Social Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Points_Benefit_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Points Benefit Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_Preferred_Communication__c</fullName>
        <description>Field to capture communication preference of contact.</description>
        <label>Preferred Communication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Post (Letter)</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Core_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Core_Twitter__c</fullName>
        <description>Twitter handle of Contact</description>
        <label>Twitter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Zip_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_eRPM_Person_Id__c</fullName>
        <label>eRPM Person Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_engagements__c</fullName>
        <label>Partner engagements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Core_Do_Not_Contact</fullName>
        <active>true</active>
        <description>If Do Not Contact flag is selected</description>
        <label>Contact Layout – Do Not Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Core_Intel_Contact</fullName>
        <active>true</active>
        <description>Standard Contact</description>
        <label>Intel Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outlook_contact</fullName>
        <active>true</active>
        <description>SFO contact record type</description>
        <label>Outlook contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard Contact</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>